--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -11,7 +11,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $github_token
+  github_token: $app-user
   local_dir: build
   on:
     branch: master
