--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-user",
+  "name": "appuser",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://asis012.github.io/reactTutorials/app-user",
